# ShiftManagerPlusPlus

./: CMakeLists.txt  README.md  main.py
include/: dbhandler.h  mainwindow.h  shift.h
resources/: init.sql
src/: dbhandler.cpp  main.cpp  mainwindow.cpp  shift.cpp
ui/: main.qml  mainwindow.ui
